crates/aiy-display/src/v2/snapshots/aiy_display__v2__parser__tests__address_literal.snap
---
source: crates/aiy-display/src/v2/parser.rs
expression: "strands(r#\"{@0x1 | @ 0x2 | @42 | @0x12_34_56}\"#)"
---
{ @0x0000000000000000000000000000000000000000000000000000000000000001
| @0x0000000000000000000000000000000000000000000000000000000000000002
| @0x000000000000000000000000000000000000000000000000000000000000002a
| @0x0000000000000000000000000000000000000000000000000000000000123456
}
