crates/aiy-display/src/v2/snapshots/aiy_display__v2__parser__tests__all_text.snap
---
source: crates/aiy-display/src/v2/parser.rs
expression: "strands(r#\"foo bar\"#)"
---
"foo bar"
