crates/aiy-display/src/v2/snapshots/aiy_display__v2__parser__tests__back_to_back_exprs.snap
---
source: crates/aiy-display/src/v2/parser.rs
expression: "strands(r#\"{foo . bar}{baz.qux}\"#)"
---
{ foo.bar
}
{ baz.qux
}
