crates/aiy-display/src/v2/snapshots/aiy_display__v2__parser__tests__bool_literals.snap
---
source: crates/aiy-display/src/v2/parser.rs
expression: "strands(r#\"{true | false}\"#)"
---
{ true
| false
}
